# Spartan-Write-Benchmark

./: .gitignore  README.md  pyproject.toml
core/: bench.py  cli.py
core/dashboard/: __init__.py  app.py  charts.py  loader.py  models.py  render.py  utils.py
core/dataset/: __init__.py  clone_dataset.py  load_dataset.py  register_jobs.py
core/score/: __init__.py  chat_duration.py  token_use.py  tool_use.py
core/utils/: __init__.py  db.py  metadata.py  run_params.py  server_api.py
data/000-empty-section/: metadata.json  prompt.json
data/001-title-and-sections/: metadata.json  prompt.json
data/002-add-contents-to-section/: metadata.json  prompt.json
data/003-remove-contents-from-section/: prompt.json
data/004-large-unarranged-doc/: metadata.json  prompt.json
data/005-summarize-large-doc/: metadata.json  prompt.json  prompt.txt
data/006-large-new-section/: metadata.json  prompt.json  prompt.txt
data/007-large-remove-contents/: SJSUthesis.cls  metadata.json  prompt.json  prompt.txt
data/008-large-search-fuzzy/: metadata.json  prompt.json  prompt.txt
data/009-large-remove-fuzzy/: metadata.json  prompt.json  prompt.txt
data/010-large-rearrange-sections/: main.tex
data/011-large-rearrange-subsections/: prompt.json  prompt.txt
data/012-fail-to-generate-content/: metadata.json  prompt.json
data/013-large-add-image/: prompt.json
data/014-large-broken-explicit-fix/: prompt.json
data/015-large-broken-implicit-fix/: main.tex  prompt.json
data/016-large-parse-image/: IEEEtran.cls  metadata.json  prompt.json
result/: .gitignore
(+8 files in other folders)
